2006-12-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/log.c (log_err, log_errno): Replaced magic number 1024
	  with LOG_BUFFER_MAXLEN define.

	* src/munged/munged.c (daemonize_init): Disabled "daemonize" pipe in
	  parent process after initial fork().

2006-12-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec.c: Added missing stdlib.h & time.h #includes.

	* src/libmunge/munge_ctx.3.in: Renamed "COMPRESSION TYPES" section
	  header to "ZIP TYPES".

	* src/munged/munged.8.in: Fixed Description section to reflect the
	  changes introduced with the v3 credential format where compression
	  now takes place before the MAC calculation.
	* src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/libmunge/munge_enum.3.in,
	  src/munge/munge.1.in, src/munge/remunge.1.in, src/munged/munged.8.in:
	  Minor formatting, grammar, and spelling tweaks.

2006-12-01  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v3_format.txt: Added comment specifying encryption
	  uses PKCS #5 padding.

2006-11-23  Chris Dunlap  <cdunlap@llnl.gov>

	* BUGS, TODO: Updated.

2006-11-22  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked wording of 0.5.6 release notes.

	* : Released 0.5.6.

	* HISTORY, META, NEWS: Updated for 0.5.6 release.

	* src/munged/auth_recv.h, src/munged/conf.h, src/munged/crypto.h,
	  src/munged/thread.h: Tweaked formatting.

	* src/munged/cred.h: Removed evp.h include to fix bug causing build
	  using Libgcrypt to fail without OpenSSL headers.

2006-11-14  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.5.

	* BUGS, HISTORY, META, NEWS, PLATFORMS: Updated for 0.5.5 release.

	* src/libmunge/munge.h: Tweaked comments.

	* src/munged/cipher.c (HAVE_OPENSSL:_cipher_map_enum),
	  src/libmunge/enum.c: Made AES-256 support dependent upon SHA-256
	  since the 256-bit cipher key length can currently only be satisfied
	  by a 256-bit message digest.

2006-11-13  Chris Dunlap  <cdunlap@llnl.gov>
